[package]
name = "pvec"
version = "0.2.0"
authors = ["Araz Abishov <araz@abishov.com>"]
description = "RRB-Tree based persistent vector implementation."
edition = "2018"
license = "MIT"
repository = "https://github.com/ArazAbishov/pvec-rs"
documentation = "https://docs.rs/pvec/"
readme = "README.md"
keywords = ["persistent", "data-structures", "collections"]
categories = ["data-structures"]
exclude = ["/.github/*", "/benches/words/words.txt"]
autobenches = false

[workspace]
members = [
    "pvec-core",
    "pvec-utils",
    "pvec-vis",
    "pvec-memory",
    "pvec-memory/benches"
]

[dependencies]
rayon = { version = "1.1.0", optional = true }
pvec-utils = { path = "pvec-utils" }
pvec-core = { path = "pvec-core" }

[dev-dependencies]
im-rc = "14.0.0"
im = "14.0.0"
rand_xorshift = "0.1"
criterion = "0.3.1"
rand = "0.6"
num = "0.2.0"

[features]
serde-serializer = ["pvec-core/serde-serializer"]
rayon-iter = ["pvec-core/rayon-iter", "rayon"]
arc = ["pvec-core/arc", "pvec-utils/arc",]
small_branch = ["pvec-core/small_branch"]

[lib]
bench = false

[[bench]]
name = "lib"
harness = false
