[package]
name = "pvec"
version = "0.2.0"
authors = ["Araz Abishov <araz@abishov.com>"]
description = "RRB-Tree based persistent vector implementation."
edition = "2018"
license = "MIT"
repository = "https://github.com/ArazAbishov/pvec-rs"
documentation = "https://docs.rs/pvec/"
readme = "README.md"
keywords = ["persistent", "data-structures", "collections"]
categories = ["data-structures"]
exclude = ["/.github/*", "/benches/words/words.txt"]
autobenches = false

[workspace]
members = [
    "web-vis",
    "benches-mem",
    "benches-mem/benches"
]

[dependencies]
serde = { version = "1.0.73", features = ["rc"], optional = true}
serde_json = { version = "1.0.26", optional = true }
serde_derive = { version = "1.0.73", optional = true }
rayon = { version = "1.1.0", optional = true }

[dev-dependencies]
im-rc = "14.0.0"
im = "14.0.0"
rand_xorshift = "0.1"
criterion = "0.3.1"
rand = "0.6"
num = "0.2.0"

[features]
serde-serializer = ["serde", "serde_json", "serde_derive"]
rayon-iter = ["rayon"]
small_branch = []
arc = []

[lib]
bench = false

[[bench]]
name = "lib"
harness = false
