# ToDo: adopt Rust 2018 edition
# ToDo: make serde an optional dependency too
# edition = "2018"

[package]
name = "pvec-core"
version = "0.1.0"
authors = ["Araz Abishov <araz@abishov.com>"]

[dependencies]
pvec-utils = { version = "0.1.0", path = "../pvec-utils" }
serde = { version = "1.0.73", features = ["rc"] }
serde_json = "1.0.26"
serde_derive = "1.0.73"
rayon = { version = "1.1.0", optional = true }
