# ToDo: adopt Rust 2018 edition
# ToDo: make serde an optional dependency too
# edition = "2018"

[package]
name = "pvec-core"
version = "0.1.0"
authors = ["Araz Abishov <araz@abishov.com>"]

[dependencies]
serde = { version = "1.0.73", features = ["rc"], optional = true}
serde_json = { version = "1.0.26", optional = true }
serde_derive = { version = "1.0.73", optional = true }
pvec-utils = { version = "0.1.0", path = "../pvec-utils" }
rayon = { version = "1.1.0", optional = true }

[features]
serde-serializer = ["serde", "serde_json", "serde_derive"]
rayon-iter = ["rayon"]
arc = ["pvec-utils/arc"]