[package]
name = "pvec-core"
version = "0.2.0"
authors = ["Araz Abishov <araz@abishov.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.73", features = ["rc"], optional = true}
serde_json = { version = "1.0.26", optional = true }
serde_derive = { version = "1.0.73", optional = true }
rayon = { version = "1.1.0", optional = true }
pvec-utils = { path = "../pvec-utils" }

[features]
serde-serializer = ["serde", "serde_json", "serde_derive"]
rayon-iter = ["rayon"]
arc = ["pvec-utils/arc"]
small_branch = []