[package]
name = "pvec-vis"
version = "0.1.0"
authors = ["arazabishov"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

# TODO: feature flags pass through
pvec = { path = "../", features = ["serde-serializer", "small_branch"] }

# TODO: how to import the serde version used by the parent project?
serde_json = "1.0.41"
serde = "1.0.102"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
